main.tf
provider "aws" {
  region  = "us-east-1"
  access_key = ""
  secret_key = ""
}


# 1 - Create VPC
# 2 - Create Internet Gateway
# 3 - Create custom Route table
# 4 - Create a subnet
# 5 - Associate subnet with Route table
# 6 - Create Security Group to allow port 22,80,443
# 7 - Create a network interface with an IP and subnet that was create in step 4
# 8 - Assign an elastic IP to the network interface created in step 7
# 9 - Create ubuntu server and install/enable apache2

# 1 - create vpc

resource "aws_vpc" "bay-virtual_private_cloud" {
    cidr_block = "10.0.0.0/16"
    tags = {
      "Name" = "Bays_VPC"
    }
}

# 2 - Create Internet Gateway

resource "aws_internet_gateway" "bays-internet-Gateway" {
  vpc_id = aws_vpc.bay-virtual_private_cloud.id #Reference ID

  tags = {
    Name = "bays_gateway"
  }
}

# 3 - Create a Route table

resource "aws_route_table" "bays-first-route-table" {
  vpc_id = aws_vpc.bay-virtual_private_cloud.id

  route {
    cidr_block = "0.0.0.0/0" #DEFAULT ROUTE
    gateway_id = aws_internet_gateway.bays-internet-Gateway.id
  }

  route {
    ipv6_cidr_block  = "::/0"
    gateway_id = aws_internet_gateway.bays-internet-Gateway.id 
  }

  tags = {
    Name = "RouteTable"
  }
}

# 4 - Create a subnet

resource "aws_subnet" "bays_subnet" {
  vpc_id = aws_vpc.bay-virtual_private_cloud.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"  
}

#5 - Associate subnet with Route table
resource "aws_route_table_association" "a" {
  subnet_id = aws_subnet.bays_subnet.id
  route_table_id = aws_route_table.bays-first-route-table.id
}
#6 - Create a security Group

resource "aws_security_group" "bays_security_group" {
  name        = "bays_traffic"
  description = "bays_traffic_management"
  vpc_id      = aws_vpc.bay-virtual_private_cloud.id

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Allow_web_bays"
  }
}

# 7 - Create a network interface with an IP and subnet that was create in step 4


resource "aws_network_interface" "bays_network" {
  subnet_id       = aws_subnet.bays_subnet.id #DONT FORGET TO SPECIFY THE ID ATTRIBUTE !!!!
  private_ips     = ["10.0.1.50"] #PRIVATE
  security_groups = [aws_security_group.bays_security_group.id]
  tags = {
    Name = "baynet"
  }
}

#PUBLIC IP ACESS

# 8 - Assign an elastic IP to the network interface created 

resource "aws_eip" "bays_elasticIP" {
  vpc                       = true
  network_interface         = aws_network_interface.bays_network.id
  #Depends-Explicity-dependency
  depends_on = [
    aws_internet_gateway.bays-internet-Gateway #REFERENCE THE WHOLE OBJECT
  ]

  associate_with_private_ip = "10.0.1.50"

}
  output "server_public_ip" {
  value = aws_eip.bays_elasticIP.public_ip
}

# 9 - CREATE Ubuntu server
resource "aws_instance" "Bays_Ubuntu_Apache" {
  ami = "ami-08c40ec9ead489470" #Canonical, Ubuntu, 22.04 LTS, amd64 jammy image build on 2022-09-12
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "main-key"

  network_interface {
    device_index = 0 #First network association
    network_interface_id = aws_network_interface.bays_network.id


  }
#INSTALL APACHE BASHING

user_data = <<-EOF
            #!/bin/bash
            sudo apt update -y
            sudo apt install apache2 -y
            sudo systemetl start apache2
            sudo bash c 'echo Bays first web server > /var/www/html/index.html'
EOF
tags = {
  Name = "Web-server"
}

}
